<resources>
    <string name="app_name">BicycleShop</string>
    <string name="edit_bicycle">Edit Bicycle</string>
    <string name="add_new_bicycle">Add Bicycle</string>
    <string name="type_tourer">Tourer</string>
    <string name="type_road">Road</string>
    <string name="type_triathlon">Triathlon</string>
    <string name="type_mountain">Mountain</string>
    <string name="type_hybrid">Hybrid</string>
    <string name="type_unknown">Unknown</string>
    <string name="supplier_email_hint">company@gmail.com</string>
    <string name="pound_sign">£ </string>
    <string name="price_hint">GBP</string>
    <string name="model_hint">e.g. Genesis Tour de Fer</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="quantity_zero">0</string>
    <string name="quantity_hint">enter quantity</string>
    <string name="reorder">Reorder</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="insert_dummy">Insert Dummy Data</string>
    <string name="delete_all">Delete All Entries</string>
    <string name="error_inserting">Error adding bicycle</string>
    <string name="insertion_complete">Bicycle successfully added</string>
    <string name="error_updating">Error updating bicycle</string>
    <string name="update_complete">Bicycle successfully updated</string>
    <string name="delete_error">Error deleting bicycle</string>
    <string name="delete_complete">Bicycle successfully deleted</string>
    <string name="delete_confirmation">Delete this bicycle?</string>
    <string name="cancel">Cancel</string>
    <string name="sale">Sale</string>
    <string name="quantity">Quantity remaining: </string>
    <string name="bicycle_model">Bicycle model:</string>
    <string name="type">Type:</string>
    <string name="supplier">Supplier:</string>
    <string name="price">Price:</string>
    <string name="no_stock">No bicycles in stock. \n Buy some bikes!</string>
    <string name="click_to_add">add image</string>
    <string name="out_of_stock">Out of stock!</string>
    <string name="left_in_stock">left in stock</string>
    <string name="unsaved_changes_message">Leave without saving changes?</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue editing</string>
    <string name="valid_photo">Please add a photo</string>
    <string name="valid_model">Please enter valid model</string>
    <string name="valid_type">Please enter valid type</string>
    <string name="valid_quantity">Please enter valid quantity</string>
    <string name="valid_price">Please enter valid price</string>
    <string name="valid_supplier">Please enter valid supplier</string>
</resources>
